--- a/ned/nedApp/Db/ROCHVMain.template
+++ b/ned/nedApp/Db/ROCHVMain.template
@@ -25,8 +25,8 @@ record(fanout, "$(P):InitProc") {
    field(LNK2, "$(P):MaxVSet")
    field(LNK3, "$(P):Enable")
    field(LNK4, "$(P):VoltSet")
-   field(LNK5, "$(P):VConvSet")
-   field(LNK6, "$(P):DConvSet")
+   field(LNK5, "$(P):VConv")
+   field(LNK6, "$(P):DConv")
 }
 
 #
@@ -143,7 +143,7 @@ record(ai, "$(P):Curr") {
    field(INP, "@ROCHV.proto getNum(RC) $(PORT) $(ADDR)")
    field(LINR, "SLOPE")
    field(PREC, "4")
-   field(ESLO, "000322581")
+   field(ESLO, "0.000322581")
    field(EOFF, "0")
    field(EGU, "ma")
    field(HSV, "MAJOR")
