Applied EPICS naming convention to all records

--- a/ned/nedApp/Db/AdaraPlugin.template
+++ b/ned/nedApp/Db/AdaraPlugin.template
@@ -1,8 +1,8 @@
-record(longin, "$(P)$(R)BadPulseDrops")
+record(longin, "$(P)BadPulseDrops")
 {
    field(DESC,  "Prev pulse dropped packets")
    field(DTYP,  "asynInt32")
-   field(INP,   "@asyn($(PORT),$(ADDR),$(TIMEOUT))BadPulseDrops")
+   field(INP,   "@asyn($(PORT))BadPulseDrops")
    field(SCAN,  "I/O Intr")
    field(VAL,   "0")
    field(HIGH,  "1")
@@ -10,11 +10,11 @@ record(longin, "$(P)$(R)BadPulseDrops")
    field(HSV,   "MAJOR")
    field(LSV,   "NO_ALARM")
 }
-record(longin, "$(P)$(R)BadDspDrops")
+record(longin, "$(P)BadDspDrops")
 {
    field(DESC,  "Unexpected DSP drop packets")
    field(DTYP,  "asynInt32")
-   field(INP,   "@asyn($(PORT),$(ADDR),$(TIMEOUT))BadDspDrops")
+   field(INP,   "@asyn($(PORT))BadDspDrops")
    field(SCAN,  "I/O Intr")
    field(VAL,   "0")
    field(HIGH,  "1")
