--- a/ned/nedApp/Db/Makefile
+++ b/ned/nedApp/Db/Makefile
@@ -10,7 +10,7 @@ include $(TOP)/configure/CONFIG
 #----------------------------------------------------
 # Create and install (or just install) into <top>/db
 # databases, templates, substitutions like this
-DB += ned.template
+DB += Occ.template
 DB += BasePlugin.template
 DB += BaseSocketPlugin.template
 DB += BaseModulePlugin.template
