--- a/ned/nedApp/Db/BaseModulePlugin.template
+++ b/ned/nedApp/Db/BaseModulePlugin.template
@@ -1,40 +1,40 @@
-record(bo, "$(P)$(R)Enable")
+record(bo, "$(P)Enable")
 {
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Enable")
+    field(OUT,  "@asyn($(PORT))Enable")
     field(ZNAM, "No")
     field(ONAM, "Yes")
     field(VAL,  "1")
     field(PINI, "YES")
 }
-record(longin, "$(P)$(R)ProcCount")
+record(longin, "$(P)ProcCount")
 {
     field(DTYP, "asynInt32")
-    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))ProcCount")
+    field(INP,  "@asyn($(PORT))ProcCount")
     field(VAL,  "0")
     field(SCAN, "Passive")
 }
-record(longin, "$(P)$(R)RxCount")
+record(longin, "$(P)RxCount")
 {
     field(DTYP, "asynInt32")
-    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))RxCount")
+    field(INP,  "@asyn($(PORT))RxCount")
     field(VAL,  "0")
     field(SCAN, "Passive")
 }
-record(stringin, "$(P)$(R)HardwareId")
+record(stringin, "$(P)HardwareId")
 {
     field(DESC, "Hardware ID address")
     field(DTYP, "asynOctetRead")
-    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))HardwareId")
+    field(INP,  "@asyn($(PORT))HardwareId")
     field(SCAN, "Passive")
     field(PINI, "YES")
 }
-record(mbbi, "$(P)$(R)Status")
+record(mbbi, "$(P)Status")
 {
     field(DESC, "Status of RocPlugin")
     field(PINI, "YES")
     field(DTYP, "asynInt32")
-    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Status")
+    field(INP,  "@asyn($(PORT))Status")
     field(ZRVL, "0")
     field(ZRST, "Not initialized")
     field(ONVL, "1")
@@ -53,11 +53,11 @@ record(mbbi, "$(P)$(R)Status")
     field(SVST, "Ready")
     field(SCAN, "I/O Intr")
 }
-record(mbbo, "$(P)$(R)Command")
+record(mbbo, "$(P)Command")
 {
     field(DESC, "Issue RocPlugin command")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Command")
+    field(OUT,  "@asyn($(PORT))Command")
     field(ZRVL, "0")
     field(ZRST, "Reset")
     field(ONVL, "128")
@@ -75,45 +75,45 @@ record(mbbo, "$(P)$(R)Command")
     field(SVVL, "131")
     field(SVST, "Stop acquisition")
 }
-record(stringin, "$(P)$(R)HardwareDate")
+record(stringin, "$(P)HardwareDate")
 {
     field(DTYP, "asynOctetRead")
-    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))HardwareDate")
+    field(INP,  "@asyn($(PORT))HardwareDate")
     field(VAL,  "Unknown")
     field(SCAN, "Passive")
 }
-record(longin, "$(P)$(R)HardwareRev")
+record(longin, "$(P)HardwareRev")
 {
     field(DTYP, "asynInt32")
-    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))HardwareRev")
+    field(INP,  "@asyn($(PORT))HardwareRev")
     field(VAL,  "0")
     field(SCAN, "Passive")
 }
-record(longin, "$(P)$(R)HardwareVer")
+record(longin, "$(P)HardwareVer")
 {
     field(DTYP, "asynInt32")
-    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))HardwareVer")
+    field(INP,  "@asyn($(PORT))HardwareVer")
     field(VAL,  "0")
     field(SCAN, "Passive")
 }
-record(stringin, "$(P)$(R)FirmwareDate")
+record(stringin, "$(P)FirmwareDate")
 {
     field(DTYP, "asynOctetRead")
-    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))FirmwareDate")
+    field(INP,  "@asyn($(PORT))FirmwareDate")
     field(VAL,  "Unknown")
     field(SCAN, "Passive")
 }
-record(longin, "$(P)$(R)FirmwareRev")
+record(longin, "$(P)FirmwareRev")
 {
     field(DTYP, "asynInt32")
-    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))FirmwareRev")
+    field(INP,  "@asyn($(PORT))FirmwareRev")
     field(VAL,  "0")
     field(SCAN, "Passive")
 }
-record(longin, "$(P)$(R)FirmwareVer")
+record(longin, "$(P)FirmwareVer")
 {
     field(DTYP, "asynInt32")
-    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))FirmwareVer")
+    field(INP,  "@asyn($(PORT))FirmwareVer")
     field(VAL,  "0")
     field(SCAN, "Passive")
 }
