--- a/ned/nedApp/Db/BasePlugin.template
+++ b/ned/nedApp/Db/BasePlugin.template
@@ -1,22 +1,22 @@
-record(bo, "$(P)$(R)Enable")
+record(bo, "$(P)Enable")
 {
    field(DTYP, "asynInt32")
-   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Enable")
+   field(OUT,  "@asyn($(PORT))Enable")
    field(ZNAM, "No")
    field(ONAM, "Yes")
    field(VAL,  "0")
 }
-record(longin, "$(P)$(R)ProcCount")
+record(longin, "$(P)ProcCount")
 {
    field(DTYP,  "asynInt32")
-   field(INP,   "@asyn($(PORT),$(ADDR),$(TIMEOUT))ProcCount")
+   field(INP,   "@asyn($(PORT))ProcCount")
    field(VAL,   "0")
    field(SCAN,  "I/O Intr")
 }
-record(longin, "$(P)$(R)RxCount")
+record(longin, "$(P)RxCount")
 {
    field(DTYP,  "asynInt32")
-   field(INP,   "@asyn($(PORT),$(ADDR),$(TIMEOUT))RxCount")
+   field(INP,   "@asyn($(PORT))RxCount")
    field(VAL,   "0")
    field(SCAN,  "I/O Intr")
 }
