--- a/ned/nedApp/Db/BaseSocketPlugin.template
+++ b/ned/nedApp/Db/BaseSocketPlugin.template
@@ -1,34 +1,34 @@
-record(stringout, "$(P)$(R)ListenIp")
+record(stringout, "$(P)ListenIp")
 {
     field(DTYP, "asynOctetWrite")
-    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))ListenIp")
+    field(OUT,  "@asyn($(PORT))ListenIp")
     field(VAL,  "Unknown")
 }
-record(longout, "$(P)$(R)ListenPort")
+record(longout, "$(P)ListenPort")
 {
    field(DTYP,  "asynInt32")
-   field(OUT,   "@asyn($(PORT),$(ADDR),$(TIMEOUT))ListenPort")
+   field(OUT,   "@asyn($(PORT))ListenPort")
    field(VAL,   "0")
 }
-record(stringin, "$(P)$(R)ClientIp")
+record(stringin, "$(P)ClientIp")
 {
     field(DTYP, "asynOctetRead")
-    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))ClientIp")
+    field(INP,  "@asyn($(PORT))ClientIp")
     field(VAL,  "None")
    field(SCAN,  "I/O Intr")
 }
-record(longin, "$(P)$(R)TxCount")
+record(longin, "$(P)TxCount")
 {
    field(DTYP,  "asynInt32")
-   field(INP,   "@asyn($(PORT),$(ADDR),$(TIMEOUT))TxCount")
+   field(INP,   "@asyn($(PORT))TxCount")
    field(VAL,   "0")
    field(SCAN,  "I/O Intr")
 }
-record(longout, "$(P)$(R)CheckClientDel")
+record(longout, "$(P)CheckClientDel")
 {
    field(DESC,  "Check client interval")
    field(EGU,   "seconds")
    field(DTYP,  "asynInt32")
-   field(OUT,   "@asyn($(PORT),$(ADDR),$(TIMEOUT))CheckClientDel")
+   field(OUT,   "@asyn($(PORT))CheckClientDel")
    field(VAL,   "5")
 }
